@@ -3,19 +3,19 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=audacious
-pkgver=1.5.1
+pkgver=2.1
 pkgrel=1
 pkgdesc="Media player based on BMP"
 arch=('i686' 'x86_64')
 url="http://audacious-media-player.org/"
 license=('GPL3')
-depends=('gtk2' 'libmcs' 'dbus-glib' 'libsamplerate' 'libxml2' 'desktop-file-utils')
+depends=('gtk2' 'libmcs' 'dbus-glib' 'libsamplerate' 'libxml2' 'desktop-file-utils' 'audacious-plugins')
 optdepends=('unzip: Zipped skins support')
 provides=('audacious-player')
 replaces=('audacious-player')
 install=audacious.install
-source=(http://distfiles.atheme.org/audacious-$pkgver.tbz2)
-md5sums=('ea7a8ee2e8f1a301b40ccf40788ab0eb')
+source=(http://distfiles.atheme.org/audacious-$pkgver.tgz)
+md5sums=('03ab6a062e5909214841f90f767f1147')
 
 build() {
   cd "$srcdir/audacious-$pkgver"
